<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:padding="15dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/day_et"
        android:hint="@string/enter_day"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/time_et"
        android:hint="@string/enter_time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@id/day_et"
        app:layout_constraintEnd_toEndOf="@id/day_et"
        app:layout_constraintTop_toBottomOf="@id/day_et"
        android:layout_marginTop="5dp"

        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment_et"
        android:layout_width="match_parent"
        android:hint="@string/enter_comment"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@id/day_et"
        app:layout_constraintEnd_toEndOf="@id/day_et"
        app:layout_constraintTop_toBottomOf="@id/time_et"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:background="@drawable/button_shape"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/day_et"
        app:layout_constraintEnd_toEndOf="@id/day_et"
        app:layout_constraintTop_toBottomOf="@id/comment_et"
        android:layout_marginTop="5dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>