<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:padding="15dp">


    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/surname_tv"
        android:text="@string/user_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/name_tv"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        android:layout_marginTop="5dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_et"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@id/name_tv"
        app:layout_constraintTop_toBottomOf="@id/surname_tv"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/enter_info_btn"
        android:text="@string/enter_info"
        android:layout_width="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_et"/>

</androidx.constraintlayout.widget.ConstraintLayout>